# SteelOxide

./: Cargo.toml  README.md
data/: 2_6_0.json  pfsense_etc.json  pfsense_webconfig.json  sshd_config  sudoers_sudo  sudoers_wheel
src/: main.rs  utils.rs
src/commands/: mod.rs  persistnt.rs  setup.rs  ssplus.rs
src/freebsd/: core.rs  mod.rs  persistnt.rs  preset.rs  revive.rs  setup.rs  tracker.rs
src/linux/: core.rs  mod.rs  preset.rs  revive.rs  setup.rs  tracker.rs
src/utils/: config.rs  mod.rs  password.rs  pid.rs  tools.rs  user.rs
src/windows/: mod.rs  preset.rs  revive.rs  setup.rs  tracker.rs
