[package]
name = "steeloxide"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
get_if_addrs = "0.5.3"
log = { version = "0.4.17", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
rpassword = "7.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha1 = "0.10.5"
simplelog = { version = "0.12.0", features = ["paris"] }
subprocess = "0.2.9"
